@@ -1,3 +1,8 @@
+2007-11-18  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (Filename completion): Simplify explanation of
+	double-slash behaviour.  Explain directory contents flushing.
+
 2007-11-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Connection caching): Tramp flushes connection
